--- a/src/css/general.scss
+++ b/src/css/general.scss
@@ -2,6 +2,21 @@ body {
   overflow-y: scroll;
 }
 
+.breadcrumbs {
+  --ifm-breadcrumb-item-background-active: transparent;
+}
+
+.breadcrumbs__item:not(.breadcrumbs__item--active) .breadcrumbs__link:hover {
+  color: var(--ifm-color-primary);
+  text-decoration: underline;
+}
+
+.breadcrumbs__item--active .breadcrumbs__link {
+  background: none;
+  color: var(--ifm-font-color-base);
+  cursor: default;
+}
+
 :root {
   /* vCluster brand primary: Blaze Orange */
   --ifm-color-primary: #ff6600;
@@ -19,24 +34,6 @@ body {
   --ifm-footer-background-color: var(--ifm-color-secondary);
 }
 
-.enterprise-feature .alert--info {
-  background: #fff0e4;
-  border-left-color: #ff6600;
-}
-
-.enterprise-feature .alert--info svg {
-  background: url('/media/rebranding/vcluster_symbol_dark_2.svg');
-  background-size: contain;
-  width: 24px;
-  height: 24px;
-  color: transparent;
-  fill: transparent;
-}
-
-.enterprise-ultimate .alert--info {
-  background: #fff0e4;
-  border-left-color: #ff6600;
-}
 
 @-moz-document url-prefix() {
   .alert li {
