--- a/src/css/content/tabs.scss
+++ b/src/css/content/tabs.scss
@@ -9,7 +9,7 @@
 
 .tabs > .tab-item:focus,
 .tabs > .tab-item:hover {
-  background-color: #f2f9fb;
+  background-color: var(--ifm-color-emphasis-100);
 }
 
 ul[role="tablist"] {
@@ -24,14 +24,14 @@ ul[role="tablist"] li:hover {
 }
 
 ul[role="tablist"] li:not([aria-selected="true"]):hover {
-  border-bottom-color: #a6acd0;
+  border-bottom-color: var(--ifm-color-emphasis-300);
 }
 
 [role="tabpanel"] {
   background-color: #fff;
   padding: 1.3em;
   margin: -1em -5px 0;
-  border: 1px solid #d2e8fd !important;
+  border: 1px solid rgba(0, 0, 0, 0.1) !important;
   border-radius: 5px;
 }
 
